--- a/Jit/Examples/css/base.css
+++ b/Jit/Examples/css/base.css
@@ -1,10 +1,26 @@
-html, body {
+html {
     margin:0;
     padding:0;
     font-family: "Lucida Grande", Verdana;
     font-size: 0.9em;
     text-align: center;
-    background-color:#F2F2F2;
+}
+
+body { 
+	background: url(images/background.png) repeat 5% 5%;
+	z-index: 70;
+}
+#midground {
+	background: url(images/midground.png) repeat 20% 20%;
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	z-index: 80;
+}
+#foreground {
+	background: url(images/foreground.png) repeat 90% 110%;
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	z-index: 90;
 }
 
 input, select {
@@ -27,56 +43,26 @@ a {
     color:#23A4FF;
 }
 
-#container {
-    width: 1000px;
-    height: 600px;
-    margin:0 auto;
-    position:relative;
-}
 
-#left-container, 
-#right-container, 
+#container {
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    
+}
 #center-container {
-    height:600px;
+    height:100%;
+    width:100%;
     position:absolute;
     top:0;
-}
-
-#left-container, #right-container {
-    width:200px;
-    color:#686c70;
-    text-align: left;
-    overflow: auto;
-    background-color:#fff;
-    background-repeat:no-repeat;
-    border-bottom:1px solid #ddd;
-}
-
-#left-container {
-    left:0;
-    background-image:url('col2.png');
-    background-position:center right;
-    border-left:1px solid #ddd;
+    position:absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
     
 }
 
-#right-container {
-    right:0;
-    background-image:url('col1.png');
-    background-position:center left;
-    border-right:1px solid #ddd;
-}
 
-#right-container h4{
-    text-indent:8px;
-}
 
-#center-container {
-    width:600px;
-    left:200px;
-    background-color:#1a1a1a;
-    color:#ccc;
-}
 
 .text {
     margin: 7px;
