--- a/Jit/Examples/css/base.css
+++ b/Jit/Examples/css/base.css
@@ -65,6 +65,45 @@ a {
     top: 0; left: 0; right: 0; bottom: 0;
     
 }
+#padded{
+
+	
+	
+}
+
+#sidebar{
+		padding: 10px;
+text-align: center;
+/* 	background:#23A4FF;
+ */	position:absolute;
+ 	opacity: .78;
+    top: 0; left: 50; right: 0; bottom: 0;
+		
+}
+
+.metal {
+	font: bold 1em/2em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	text-align: center;
+	color: hsla(0,0%,20%,1);
+	text-shadow: hsla(0,0%,40%,.5) 0 -1px 0, hsla(0,0%,100%,.6) 0 2px 1px;
+
+	background-color: hsl(0,0%,90%);
+
+	-webkit-transition: color .2s;
+}
+
+.metal.linear {
+	background-image: 	-webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0)   6%, hsla(0,0%,100%, .1) 7.5%),
+						-webkit-repeating-linear-gradient(left, hsla(0,0%,  0%,0) 0%, hsla(0,0%,  0%,0)   4%, hsla(0,0%,  0%,.03) 4.5%),
+						-webkit-repeating-linear-gradient(left, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%, hsla(0,0%,100%,.15) 2.2%),
+
+						-webkit-linear-gradient(-90deg, hsl(0,0%,78%)  0%,
+														hsl(0,0%,90%) 47%,
+														hsl(0,0%,78%) 53%,
+														hsl(0,0%,70%)100%);
+}
+
+
 
 
 
